--- a/vscode/indexx.html
+++ b/vscode/indexx.html
@@ -84,7 +84,7 @@
                 <li><a href="login.html">Login</a></li>
                 <li><a href="register.html">Register</a></li>
             </ul>
-            <p class="small-text">Made with <span class="heart-icon">♥︎</span> in London</p>
+            <p class="small-text">Made with <span class="heart-icon">♥︎</span> in India</p>
         </footer>
     </div>
 
